# PPFM

./: .Doxyfile  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/Collision_Integrals/: Q4th_Ar_Ar+.txt  Q4th_Ar_Ar+2.txt  Q4th_Ar_Ar.txt  Q4th_Ar_e-.txt  Q4th_H2_H2.txt  Q4th_H_H.txt  Q4th_H_H2.txt
data/Differential_Cross_Sections/: DCS_Ar_e-.csv  DCS_H2_e-.csv
data/Electronic_Configurations/: Ar+2_ElConfig.csv  Ar+_ElConfig.csv  Ar_ElConfig.csv  H_ElConfig.csv
data/Momentum_Transport_Cross_Section/: TCS_Ar_e-.csv  TCS_H_e-.csv  TCS_In_Ar+_H2.csv  TCS_In_H+_H2.csv
data/Phase_Shifts/: PS_Bell1984_Ar_e-.csv  PS_Gibson1996_Ar_e-.csv
demo/: mainArH2.cpp  mainKrXe.cpp  mainPerformances.cpp  mainPureArZhang.cpp
src/: AcceptedSpecies.h  AcceptedSpeciesGuard.py  CiBox.cpp  CiBox.h  CollisionIntegral.cpp  CollisionIntegral.h  Composition.cpp  Composition.h  DataLoader.cpp  DataLoader.h  DataPrinter.cpp  DataPrinter.h  Devoto.cpp  Devoto.h  GasMixture.cpp  GasMixture.h  Interaction.h  Mixture.cpp  Mixture.h  OmegaCalculator.cpp  OmegaCalculator.h  ParfCalculator.cpp  ParfCalculator.h  PartitionFunction.cpp  PartitionFunction.h  PfBox.cpp  PfBox.h  Potential.cpp  Potential.h  Species.h  SpeciesAlkali.cpp  SpeciesAlkalineEarth.cpp  SpeciesGaseous.cpp  SpeciesMetalloids.cpp  SpeciesNonMetals.cpp  SpeciesRareMetals.cpp  SpeciesTransitionMetals.cpp  TcsCalculator.cpp  TcsCalculator.h  Thermodynamics.cpp  (+14 more)
src/alglib/: CMakeLists.txt  readme.txt
